=================
Changes for Crate
=================

Unreleased
==========

 - Fixed an issue due to which bulk partition creation operations wouldn't
   timeout correctly

 - Corrected the default value of the `bulk.partition_creation_timeout`
   setting. It was incorrectly reported as `0s` instead of `10s`.

 - Fixed an issue that could cause concurrent queries on sys tables to
   return inconsistent results if the table contains unassigned shards

 - Fixed an issue that could cause a `SELECT` statement to cause a missleading
   error if the table was deleted concurrently.

 - Fixed an issue that could cause a `SELECT` statement on partitioned tables
   to cause an error if all partitions were deleted concurrently.

 - Fixed a race condition that could cause a `REFRESH TABLE` statement to fail
   on partitioned tables

 - Fixed a race condition that could cause `DROP TABLE IF EXISTS` statements to
   get stuck

 - Fixed a race condition that could cause queries with a high limit to fail
   due to a missing job context.

 - Fixed an issue that caused COPY TO `s3` statements to get stuck

 - Fixed an issue which results in _id queries not matching on
   partitioned and clustered tables without primary key columns.

2015/07/07 0.49.5
=================

 - Fixed issue that could lead to a NullPointerException
   caused by reporting row results to handler node before merge phase on handler
   was started

 - Fixed an issue that could cause concurrent queries on information_schema or
   sys tables to return inconsistent results

 - Fixed a rare race condition that could cause some queries with offset + limit higher
   than 1_000_000 to return too few rows

 - Fixed a possible race condition which leads to the execution of a
   non-distributed group by instead of a distributed one.

 - Fix: IS NULL predicate in query could return records that have already been
   marked for deletion

 - Fixed hash collide in fetch requests to avoid collision of node identifiers
